--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,9 @@
 body {
-    font-family: sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
     text-align: center;
+    margin: 0;
+    background-color: black;
+    color: white;
 }
 
 #game {
