--- a/src/main.css
+++ b/src/main.css
@@ -2,6 +2,8 @@ body {
     font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
     text-align: center;
     margin: 0;
+    background-color: black;
+    color: white;
 }
 
 #game {
