--- a/src/main.css
+++ b/src/main.css
@@ -7,5 +7,20 @@ body {
 }
 
 #game {
-    display: inline-block;
+    margin: auto;
+    position: relative;
+}
+
+canvas, .pause {
+    position: absolute;
+    top: 0;
+    left: 0
+}
+
+.pause {
+    font-size: 4em;
+    padding: 1.5em;
+    box-sizing: border-box;
+    z-index: 10;
+    background-color: rgba(96, 96, 96, 0.75);
 }
