Add clock and level to border. Fix minor bug with switching from wave. Don't re-render fixtures on every frame.

--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Gill Sans MT", Calibri, sans-serif;
+    font-family: "Gill Sans MT","Gill Sans", Calibri, sans-serif;
     text-align: center;
     margin: 0;
     background-color: black;
