--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Gill Sans MT","Gill Sans", Calibri, sans-serif;
+    font-family: Candara,"Gill Sans MT","Gill Sans",Calibri,sans-serif;
     text-align: center;
     margin: 0;
     background-color: black;
@@ -11,16 +11,53 @@ body {
     position: relative;
 }
 
-canvas, .pause {
+canvas, .pause, .menu {
     position: absolute;
     top: 0;
     left: 0
 }
 
-.pause {
-    font-size: 4em;
-    padding: 1.5em;
+.pause, .menu {
     box-sizing: border-box;
+}
+
+.pause {
+    font-size: 2.75em;
+    padding: 1.5em;
     z-index: 10;
     background-color: rgba(96, 96, 96, 0.75);
+}
+
+.menu {
+}
+
+.menu h1 {
+    margin: 0.5em 0;
+}
+
+.menu .level {
+    margin: 0 0 2.5% 2.5%;
+    width: 18%;
+    box-sizing: border-box;
+    border: 0.75em solid #ccc;
+    padding: 0.5em;
+    float: left;
+    cursor: pointer;
+}
+
+.menu .level:hover {
+    background-color: #333;
+    border-color: #eee;
+}
+
+.menu .level:nth-of-type(5n+1) {
+    margin-left: 0;
+}
+
+.menu .level h2 {
+    margin-top: 0.25em;
+}
+
+.menu .level h4 {
+    margin-bottom: 0.5em;
 }
