--- a/src/main.css
+++ b/src/main.css
@@ -12,7 +12,7 @@ body {
     font-family: "Gill Sans MT","Gill Sans",Calibri,sans-serif;
 }
 
-canvas, .pause, #menu {
+canvas, .pause, #menu, .keyMap {
     position: absolute;
     top: 0;
     left: 0
@@ -24,9 +24,16 @@ canvas, .pause, #menu {
 
 .pause {
     font-size: 2.75em;
-    padding: 1.5em;
     z-index: 10;
     background-color: rgba(96, 96, 96, 0.75);
+}
+
+.pause h2 {
+    margin: 1.5em 0 0 0;
+}
+
+.pause p {
+    margin: 0;
 }
 
 #menu {
